testdata/ipset_test_1/networkpolicy.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    name: debug
    namespace: default
  spec:
    egress:
    - to:
      - podSelector:
          matchLabels:
            name: whoami
    podSelector:
      matchLabels:
        name: debug-toolbox
    policyTypes:
    - Egress
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    name: whoami
    namespace: default
  spec:
    ingress:
    - from:
      - podSelector:
          matchLabels:
            name: debug-toolbox
      - ipBlock:
          cidr: 10.95.0.239/32
      ports:
      - port: 5000
        protocol: TCP
    podSelector:
      matchLabels:
        name: whoami
    policyTypes:
    - Ingress
kind: List
metadata:
  resourceVersion: ""
