testdata/ipset_test_1/nodes.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Node
  metadata:
    name: kube-router-vm1
  spec:
    podCIDR: 10.242.0.0/24
    podCIDRs:
    - 10.242.0.0/24
    - 2001:db8:42:1000::/64
  status:
    addresses:
    - type: InternalIP
      address: 10.241.0.20
    - type: InternalIP
      address: 2001:db8:ca2:2::2ca1
- apiVersion: v1
  kind: Node
  metadata:
    name: kube-router-vm2
  spec:
    podCIDR: 10.242.1.0/24
    podCIDRs:
    - 10.242.1.0/24
    - 2001:db8:42:1001::/64
  status:
    addresses:
    - type: InternalIP
      address: 10.241.0.21
    - type: InternalIP
      address: 2001:db8:ca2:2::e7e5
kind: List
metadata:
  resourceVersion: ""
